--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 PORT=8000
-MONGODB_URL="mongodb://localhost:27017/chatly"
-SECRET_KEY='shhhhh'
-CLOUD_NAME='dx9q1dykn'
-CLOUD_API_KEY = '144861922564628'
-CLOUD_API_SECRET="WMA5AmO0eTDwpBgNooDKQ2b6wYQ"
-CLOUDINARY_URL="cloudinary://144861922564628:WMA5AmO0eTDwpBgNooDKQ2b6wYQ@dx9q1dykn"
+MONGODB_URL=
+SECRET_KEY=
+CLOUD_NAME=
+CLOUD_API_KEY = 
+CLOUD_API_SECRET="
