--- a/frontend/chatApp/package.json
+++ b/frontend/chatApp/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "emoji-picker-react": "^4.13.2",
     "react": "^19.1.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
