Add missing files from local

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=8000
-MONGODB_URL=
-SECRET_KEY=
-CLOUD_NAME=
-CLOUD_API_KEY = 
-CLOUD_API_SECRET="
+MONGODB_URL='mongodb://localhost:27017/chatly'
+SECRET_KEY='shhhh'
+CLOUD_NAME="dx9q1dykn"
+CLOUD_API_KEY = "144861922564628"
+CLOUD_API_SECRET="WMA5AmO0eTDwpBgNooDKQ2b6wYQ"
